--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-slick": "^0.30.1",
     "react-toastify": "^10.0.4",
+    "slick-carousel": "^1.8.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.6.1",
     "eslint": "^8",
