--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
